--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"chatgpt": "^4.7.0",
 		"dotenv": "^16.0.3",
 		"openai": "^3.1.0",
+		"p-retry": "^5.1.2",
 		"picocolors": "^1.0.0",
 		"qrcode-terminal": "^0.12.0",
 		"whatsapp-web.js": "^1.19.4"
