--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
 	"license": "MIT",
 	"dependencies": {
 		"@clack/prompts": "^0.4.3",
+		"canvas": "^2.11.0",
 		"chatgpt": "^4.7.0",
+		"craiyon": "^1.0.0",
 		"dotenv": "^16.0.3",
 		"openai": "^3.1.0",
 		"p-retry": "^5.1.2",
 		"picocolors": "^1.0.0",
 		"qrcode-terminal": "^0.12.0",
+		"sharp": "^0.31.3",
 		"whatsapp-web.js": "^1.19.4"
 	},
 	"devDependencies": {
